ingress/traefikIngress/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-green
spec:
  type: ClusterIP
  selector:
    name: nginx-green-pod-label
  ports:
    - port: 80
      targetPort: 80
