ingress/traefikIngress/red-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-red
spec:
  type: ClusterIP
  selector:
    name: nginx-red-pod-label
  ports:
    - port: 80
      targetPort: 80
