ingress/traefikIngress/canaryRoundRobin.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: canaryroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`20.203.120.160`) # traefik service ip here from traefik namespace
    kind: Rule
    services:
    - name: canarydeploymentservice
      kind: TraefikService
